# imu_simulation_cpp

./: CMakeLists.txt  README.md  main.cpp
lib/: i2c_multiplexer.c
lib/include/: i2c_multiplexer.h
